--- a/css/styles.css
+++ b/css/styles.css
@@ -5528,11 +5528,11 @@ textarea.form-control-lg {
 }
 
 .modal-content {
-  margin-left: 25%;
+  //margin-left: 25%;
   position: relative;
   display: flex;
   flex-direction: column;
-  width: 50%;
+  width: 100%;
   pointer-events: auto;
   background-color: #fff;
   background-clip: padding-box;
